@@ -22,8 +22,6 @@ Une fois l'environnement de travail configuré, vous pouvez créer des comptes A
 
 Vous pouvez créer des volumes NFS ou SMB dans un compte Azure NetApp Files existant ou nouveau.
 
-La fonction BlueXP appelée « modèles » vous permet de créer des volumes optimisés pour les besoins de charge de travail de certaines applications, comme les bases de données ou les services de diffusion en continu. Si votre organisation a créé des modèles de volume que vous devez utiliser, suivez la procédure ci-dessous <<Créer des volumes à partir de modèles,procédure à suivre>>.
-
 .Avant de commencer
 * Si vous souhaitez utiliser SMB, vous devez avoir configuré DNS et Active Directory.
 * Lorsque vous prévoyez de créer un volume SMB, vous devez disposer d'un serveur Windows Active Directory disponible auquel vous pouvez vous connecter. Vous entrez ces informations lors de la création du volume.
@@ -69,46 +67,6 @@ image:screenshot_anf_smb.gif["Copie d'écran des champs requis pour configurer u
 Le nouveau volume est ajouté à l'environnement de travail.
 
 Passez à <<Montez les volumes,montage du volume cloud>>.
-
-
-
-== Créer des volumes à partir de modèles
-
-Si votre entreprise a créé des modèles de volume Azure NetApp Files afin de pouvoir déployer des volumes optimisés pour répondre aux besoins de workloads de certaines applications, suivez les étapes de cette section.
-
-Le modèle devrait faciliter votre travail car certains paramètres de volume seront déjà définis dans le modèle, tels que le pool de capacité, la taille, le protocole, VNet et le sous-réseau où le volume doit résider, etc. Lorsqu'un paramètre est déjà prédéfini, il vous suffit de passer au paramètre de volume suivant.
-
-.Étapes
-. Sur la page Canevas, cliquez sur l'environnement de travail Azure NetApp Files dans lequel vous souhaitez provisionner un volume.
-. Cliquez sur image:screenshot_gallery_options.gif["Bouton plus"] > *Ajouter un volume à partir du modèle*.
-+
-image:screenshot_template_add_vol_anf.png["Capture d'écran indiquant comment ajouter un nouveau volume à partir d'un modèle."]
-
-. Dans la page _Select Template_, sélectionnez le modèle à utiliser pour créer le volume et cliquez sur *Next*.
-+
-image:screenshot_select_template_anf.png["Capture d'écran des modèles d'application disponibles."]
-
-+
-La page _Define Parameters_ s'affiche.
-
-+
-image:screenshot_define_anf_vol_from_template.png["Capture d'écran montrant un modèle vierge que vous devez remplir pour créer un volume."]
-
-+
-*Remarque :* vous pouvez cliquer sur la case *Afficher les paramètres en lecture seule* pour afficher tous les champs qui ont été verrouillés par le modèle si vous voulez voir les valeurs de ces paramètres. Par défaut, ces champs prédéfinis sont masqués et seuls les champs à compléter sont affichés.
-
-. Ajoutez des valeurs pour tous les paramètres qui ne sont pas codés en dur à partir du modèle. Voir <<Créer des volumes,créer des volumes>> Pour obtenir des informations détaillées sur les paramètres requis pour déployer un volume Azure NetApp Files,
-. Cliquez sur *Exécuter le modèle* après avoir défini tous les paramètres requis pour ce volume.
-
-
-.Résultat
-BlueXP provisionne le volume et affiche une page pour vous permettre de voir la progression.
-
-image:screenshot_template_creating_resource_anf.png["Capture d'écran indiquant la progression de la création de votre nouveau volume à partir du modèle."]
-
-Ensuite, le nouveau volume est ajouté à l'environnement de travail.
-
-Poursuivre le montage du volume cloud.
 
 
 
